[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Warranty.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Warranty.gd" type="Script" id=2]
[ext_resource path="res://Scenes/PowerUpSoundPlayer.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Flutter"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="CapsuleShape2D" id=2]

[node name="Warranty" type="RigidBody2D"]
input_pickable = true
collision_layer = 8
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Flutter"
anims/Flutter = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.22173
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="PowerUpSoundPlayer" parent="." instance=ExtResource( 3 )]
[connection signal="input_event" from="." to="." method="_on_Warranty_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="PowerUpSoundPlayer" to="." method="_on_PowerUpSoundPlayer_finished"]
